# forge

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: forge-implementation-spec.md  go-client.md  protocol.md  rust-worker.md  worker-framework-reference.md
go/: conn.go  conn_dial_unix.go  conn_dial_windows.go  conn_test.go  doc.go  embed.go  error_payload_test.go  event_bus.go  event_bus_test.go  go.mod  go.sum  rpc_client.go  rpc_client_test.go  worker_pool.go  worker_process.go  worker_process_pipe_other.go  worker_process_pipe_windows.go  worker_process_wait_pipe_other.go  worker_process_wait_pipe_windows.go
protocol/: spec.md
protocol/fixtures/: cancel_job-error-not-found.json  cancel_job-request.json  cancel_job-response.json  capabilities-request.json  capabilities-response.json  health-request.json  health-response.json  job_status-error-not-found.json  job_status-request.json  job_status-response.json  ping-request.json  ping-response.json  shutdown-request.json  shutdown-response.json
rust/: Cargo.toml  README.md
rust/examples/minimal-worker/: Cargo.toml  README.md
rust/examples/minimal-worker/src/: main.rs
rust/forge-worker-sdk/: Cargo.toml
rust/forge-worker-sdk/src/: dispatcher.rs  framing.rs  job_registry.rs  lib.rs  prelude.rs  server.rs
rust/forge-worker-sdk/src/protocol/: control.rs  envelope.rs  mod.rs
rust/forge-worker-sdk/tests/: control_plane_dispatch.rs  framing_roundtrip.rs  job_registry.rs  protocol_fixtures.rs
scripts/: gen-fixtures.sh  release.sh
(+9 files in other folders)
